--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -1,6 +1,6 @@
 /*-- sign-in --*/
 .sign-in-wrapper {
-  background: url(../../../assets/account-bg.jpg) no-repeat 0px 0px;
+  /* background: url(../../../assets/account-bg.jpg) no-repeat 0px 0px; */
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
