--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 
-<div class="section-container">
+<div class="over_all_container">
+  <div class="section-container">
     <div class="overlay">
       <div class="ambition">
         <h1>Ambition</h1>
@@ -96,3 +97,4 @@
     </div>
   </div>
   
+</div>
